--- a/main.html
+++ b/main.html
@@ -3,10 +3,73 @@
 <html>
 
 <head>
+	<style>
+	body {
+            background-color: rgb(204, 204, 204);
+            font-family: Arial, sans-serif;
+        }
+        h1, h2 {
+            text-align: center;
+        }
+        ul {
+            padding: 10px;
+            margin: 10px;
+            border: 1px solid black;
+            background-color: beige;
+        }
+        li {
+            list-style-type: none;
+        }
+        a {
+            text-decoration-line: none;
+            color: blue;
+        }
+        .player_one, .player_two {
+            background-color: rgb(255, 255, 255);
+            padding: 10px;
+            border-radius: 10px;
+            margin: 20px auto;
+            width: 100%;
+            max-width: 600px;
+            box-sizing: border-box;
+        }
+        video, audio {
+            width: 100%;
+            height: auto;
+            display: block;
+            border-radius: 10px;
+        }
+    </style>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+	 
+</head>
+<body>
+    <h1>My Playlist</h1>
+     <ul>
+        <li><a href="https://www.pagalworld.com.se/files/download/id/64630" target="_blank">Song 1</a></li>
+        <li><a href="https://www.pagalworld.com.se/files/download/id/64630" target="_blank">Song 2</a></li>
+        <li><a href="https://www.pagalworld.com.se/files/download/id/64630" target="_blank">Song 3</a></li>
+        <li><a href="https://www.pagalworld.com.se/files/download/id/64630" target="_blank">Song 4</a></li>
+        <li><a href="https://www.pagalworld.com.se/files/download/id/64630" target="_blank">Song 5</a></li>
+    </ul>
+<h2>Now Playing...</h2>
+    <div class="player_one">
+        <video controls>
+            <source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+<h2>MP3 songs</h2>
+  
+    <div class="player_two">
+        <audio controls>
+            <source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mp3">
+            Your browser does not support the audio tag.
+        </audio>
+    </div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
